--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
             <button class="accordion">Loja:</button>
             <div class="panel">
                 <div class="social">
-                  <p>- em breve -</p>
+                  <a href="https://diaah-artesa.lojaintegrada.com.br/" target="_blank" >
+                         Diaah Artesã
+                  </a>
                 </div>
             </div>
         </article>
