--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
             <button class="accordion">Loja:</button>
             <div class="panel">
                 <div class="social">
-                  <a href="https://diaah-artesa.lojaintegrada.com.br/" target="_blank" >
+                  <p><a href="https://diaah-artesa.lojaintegrada.com.br/" target="_blank" >
                          Diaah Artesã
-                  </a>
+			  </a></p>
                 </div>
             </div>
         </article>
