--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
             <button class="accordion">Loja:</button>
             <div class="panel">
                 <div class="social">
-                  <p><a href="https://diaah-artesa.lojaintegrada.com.br/" target="_blank" >
-                         Diaah Artesã
-			  </a></p>
+                  <a href="https://diaah-artesa.lojaintegrada.com.br/" target="_blank" >
+			  <p>Diaah Artesã</p>
+			  </a>
                 </div>
             </div>
         </article>
